objects/ssot__ProductBrowseEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionCadenceStepId__c</fullName>
        <label>Action Cadence Step</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrowserModel__c</fullName>
        <label>Browser Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrowserName__c</fullName>
        <label>Browser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrowserVersionNumber__c</fullName>
        <label>Browser Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointId__c</fullName>
        <label>Contact Point</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CorrelationId__c</fullName>
        <label>Correlation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceCountryId__c</fullName>
        <label>Device Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceIPAddress__c</fullName>
        <label>Device IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLatitude__c</fullName>
        <label>Device Latitude</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLocaleId__c</fullName>
        <label>Device Locale</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLongitude__c</fullName>
        <label>Device Longitude</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceModelName__c</fullName>
        <label>Device Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DevicePostalCode__c</fullName>
        <label>Device Postal Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceType__c</fullName>
        <label>Device Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceVendorName__c</fullName>
        <label>Device Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementActionReasonText__c</fullName>
        <label>Engagement Action Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAssetId__c</fullName>
        <label>Engagement Asset</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelActionId__c</fullName>
        <label>Engagement Channel Action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementDateTm__c</fullName>
        <label>Engagement Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementEventDirectionId__c</fullName>
        <label>Engagement Event Direction</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementNbr__c</fullName>
        <label>Engagement Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementNotesTxt__c</fullName>
        <label>Engagement Notes</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementPublicationId__c</fullName>
        <label>Engagement Publication</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementTypeId__c</fullName>
        <label>Engagement Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementVehicleId__c</fullName>
        <label>Engagement Vehicle</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngmtChannelActionStatus__c</fullName>
        <label>Engagement Channel Action Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowElementRunId__c</fullName>
        <label>Flow Element Run</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeographicRegion__c</fullName>
        <label>Geographic Region</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IPAddress__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Product Browse Engagement Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalEngagementActorId__c</fullName>
        <label>Internal Engagement Actor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTestSend__c</fullName>
        <label>Is Test Send</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__KeywordSearch__c</fullName>
        <label>Keyword Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LeadlId__c</fullName>
        <label>Lead</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LinkName__c</fullName>
        <label>Link Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LinkURL__c</fullName>
        <label>Link URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketAudienceId__c</fullName>
        <label>Market Audience</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketJourneyActivityId__c</fullName>
        <label>Market Journey Activity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketSegmentId__c</fullName>
        <label>Market Segment</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketingEmailListId__c</fullName>
        <label>Marketing Email List</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OSModelName__c</fullName>
        <label>OS Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OSName__c</fullName>
        <label>OS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PageId__c</fullName>
        <label>Page Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PageName__c</fullName>
        <label>Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PagePublicTitleName__c</fullName>
        <label>Page Public Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PageURL__c</fullName>
        <label>Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerslServiceProviderName__c</fullName>
        <label>Personalization Service Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationContentId__c</fullName>
        <label>Personalization Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationId__c</fullName>
        <label>Personalization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationRequestId__c</fullName>
        <label>Personalization Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductBrandName__c</fullName>
        <label>Product Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductBrowseEventType__c</fullName>
        <label>Product Browse Event Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCategoryName__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductColorName__c</fullName>
        <label>Product Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductDisplayPosition__c</fullName>
        <label>Product Display Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductImageURL__c</fullName>
        <label>Product Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductListId__c</fullName>
        <label>Product List Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductPriceAmount__c</fullName>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductQuantity__c</fullName>
        <label>Product Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductSKU__c</fullName>
        <label>Product SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductStyleName__c</fullName>
        <label>Product Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductViewURL__c</fullName>
        <label>Product View URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientIPAddress__c</fullName>
        <label>Recipient IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientMessageId__c</fullName>
        <label>Recipient Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferrerURL__c</fullName>
        <label>Referrer URL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Referrer__c</fullName>
        <label>Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolvedURL__c</fullName>
        <label>Resolved URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderId__c</fullName>
        <label>Sales Order</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScreenHeightPixelsQuantity__c</fullName>
        <label>Screen Height Pixels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScreenWidthPixelsQuantity__c</fullName>
        <label>Screen Width Pixels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SearchFilterTypeId__c</fullName>
        <label>Search Filter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SearchFilterValue__c</fullName>
        <label>Search Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SearchResultFilterTypeId__c</fullName>
        <label>Search Result Filter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SearchResultId__c</fullName>
        <label>Search Result Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SearchResultPageNumber__c</fullName>
        <label>Search Result Page Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SearchResultPositionInPageNumber__c</fullName>
        <label>Search Result Position in Page</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SearchResultPositionNumber__c</fullName>
        <label>Search Result Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SearchResultSortTypeId__c</fullName>
        <label>Search Result Sort Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SearchResultSortValue__c</fullName>
        <label>Search Result Sort Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SearchResultTitleText__c</fullName>
        <label>Search Result Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SentDateTm__c</fullName>
        <label>Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SessionId__c</fullName>
        <label>Session</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShoppingCartId__c</fullName>
        <label>Shopping Cart</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetEngagementActorId__c</fullName>
        <label>Target Engagement Actor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskId__c</fullName>
        <label>Task</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UIComponentId__c</fullName>
        <label>UI Component Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UserAgentText__c</fullName>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebCookieId__c</fullName>
        <label>Web Cookie</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebStoreId__c</fullName>
        <label>Web Store</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebpageType__c</fullName>
        <label>Webpage Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebsiteId__c</fullName>
        <label>Website</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkflowId__c</fullName>
        <label>Workflow</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761150329_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_Id_map_ProductBrowseE_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AccountContact_Id_map_ProductBrowseE_rel</relationshipLabel>
        <relationshipName>rel_1697761150329_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761155381_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BundleProduct_Id_map_ProductBrowseEn_rel</label>
        <referenceTo>ssot__BundleProduct__dlm</referenceTo>
        <relationshipLabel>BundleProduct_Id_map_ProductBrowseEn_rel</relationshipLabel>
        <relationshipName>rel_1697761155381_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761156496_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case_Id_map_ProductBrowseEngagement__rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>Case_Id_map_ProductBrowseEngagement__rel</relationshipLabel>
        <relationshipName>rel_1697761156496_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>